# SimpleMemoryAllocator

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md  SimpleMemoryAllocator.sln  SimpleMemoryAllocatorStatic.vcxproj  SimpleMemoryManagerStatic.vcxproj  SimpleMemoryManagerStatic.vcxproj.filters  changelog.txt
examples/: LinearAllocatorExample.cpp
include/: AssertException.h  BaseAllocator.h  IAllocator.h  LinearAllocator.h  PoolAllocator.h  SimpleMemoryAllocator.h  StackAllocator.h  Util.h
src/: LinearAllocator.cpp  MemUtils.cpp  PoolAllocator.cpp  StackAllocator.cpp  Util.cpp
src/common/: AssertException.h  IAllocator.h
src/linear_allocator/: LinearAllocator.cpp  LinearAllocator.h
src/mem_utils/: MemUtils.cpp  MemUtils.h
src/pool_allocator/: PoolAllocator.cpp  PoolAllocator.h
src/stack_allocator/: StackAllocator.cpp  StackAllocator.h
